--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,21 @@ body {
     margin-bottom: 0;
 }
 
+#search-bar {
+    background: url(https://camo.githubusercontent.com/ce783627cac13ab026860e2010ab4070171760e5/68747470733a2f2f6564656e742e6769746875622e696f2f537570657254696e7949636f6e732f696d616765732f7376672f676f6f676c652e737667);
+    background-color: white;
+    background-position: 3px 0px;
+    background-repeat: no-repeat;
+    display: block;
+    margin: auto;
+    padding-left: 30px;
+    width: 20%;
+    height: 20px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+}
+
 #content {
     height: 15vh;
     text-align: center;
